Deleted temporary README files
