# src/main/java/com/example/bankcards/dto/CardStatusRequest.java
@@ -1,0 +1,8 @@
+package com.example.bankcards.dto;
+
+import com.example.bankcards.entity.Card;
+
+public record CardStatusRequest(
+        Card.CardStatus status
+) {
+}
